Fixed drag scanning on mobile devices. Started development on simple library/shelf overview.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,13 +25,3 @@ body {
     text-wrap: balance;
   }
 }
-
-.snippet-image {
-  opacity: 1;
-  transition: opacity 0.5s ease;
-}
-
-.snippet-image:hover {
-  opacity: 0;
-  z-index: -1;
-}
